fix spacing around text in header

--- a/clicky-game/src/components/Footer/Footer.css
+++ b/clicky-game/src/components/Footer/Footer.css
@@ -5,3 +5,7 @@ footer {
     color: #fff;
     overflow: auto;
 }
+
+p {
+    text-align: left;
+}
