--- a/clicky-game/src/components/Navbar/Navbar.css
+++ b/clicky-game/src/components/Navbar/Navbar.css
@@ -4,9 +4,17 @@ nav.navbar.navbar-default {
 
 .navigation {
   background-color: blueviolet;
-  
+
 }
 
 p {
+  width: 100%;
+  text-align: center;
+  font-size: 24px;
   color: white;
+  margin-bottom: 50px;
+}
+
+.header {
+  margin: 0;
 }
